# life-dashboard

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSS_CHANGES_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEPLOY_CHECKLIST.md  ENHANCEMENT_COMPLETE.md  GITHUB_READY.md  INDEX.md  LICENSE  MISSION_ACCOMPLISHED.md  PERFORMANCE_DIAGNOSIS.md  PERFORMANCE_ENGINEERING_REPORT.md  PERFORMANCE_FIXES_REFERENCE.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_VERIFICATION_CHECKLIST.md  POLISH_CHECKLIST.md  POLISH_SUMMARY.md  PREMIUM_MICRO_REFINEMENTS.md  PRODUCTION_READY.md  QUICK_START.md  README.md  README_ENHANCEMENTS.md  RENDER_START_NOW.md  TECHNICAL_IMPLEMENTATION.md  UI_REFINEMENT_SUMMARY.md  VERCEL_DEPLOYMENT.md  VISUALIZATION_ENHANCEMENTS.md  VISUAL_CHANGES.md  VISUAL_GUIDE.md  ai_insights.py  analysis.py  api_handler.py  auth.py  check_production.bat  check_production.sh  database.py  error.txt  (+16 more)
.github/profile/: README.md
